--- a/index.html
+++ b/index.html
@@ -4,80 +4,161 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="이예은 Profile">
-    <meta property="og:description" content="구름머리 보들이와 자유로운 영혼 젤리를 그려요">
-    <meta property="og:image" content="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/free_myprofile/%EB%B0%80%EB%A6%AC%EC%BD%A9/%EB%B3%B4%EB%93%A4%EC%9D%B4.png">
-    <title>이예은 Profile</title>
+    <meta property="og:title" content="LEE YE EUN">
+    <meta property="og:description" content="마케터 이예은입니다.">
+    <meta property="og:image" content="프로필.png">
+    <title>LEE YE EUN</title>
     <style>
         @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
         * {
             font-family: "Pretendard",serif;
         }
         body {
-            background-color:#FFF4D7;
+            background-color:#3C3D47;
+        }
+        .pro {
+            display: flex;
+            flex-direction: row;
+            align-items: flex-start;
+            margin-bottom: 40px;
         }
         .profile {
-            width: 100px;
-            height: 100px;
+            width: 58px;
+            height: 58px;
             border-radius: 100%;
             border: 1px solid black;
-            background-image: url('프로필.png');
-            background-position: center;
+            background-image: url('asd.png');
             background-size: cover;
         }
+        .headcopy {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            width: 260px;
+        }
         .main {
-            color : #000000;
-            font-size: 18px;
+            color : #FFFFFF;
+            font-size: 27px;
             size : 20px;
-            margin-top: 30px;
-            margin-bottom: 10px;
+            font-weight: 800;
+            margin: 0%;
         }
         .sub {
-            color : #000000;
+            color : #B1B1B5;
             font-size: 14px;
             font-weight: 400;
             size : 14px;
-            margin-top: 0px;
-            margin-bottom: 30px;
+            margin-top: 10px;
+        }
+        .minis {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            padding: 0px;
+            gap: 7px;
+            margin-bottom: 68px;
+        }
+        .minis > a {
+            width: 102px;
+            height: 48px;
+            border-radius: 32px;
+            text-decoration: none;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 12px;
+            white-space:pre-wrap;
+        }
+        .notion {
+            background-image: linear-gradient(-20deg, #e9defa 0%, #fbfcdb 100%);
+            color:#000000; 
+        }
+        .brunch {
+            background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
+            color:#000000;
+        }
+        .facebook {
+            background-image: linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%); 
+            color:#000000;
         }
         .wrap {
-            width: 300px;
+            width: 320px;
             margin: 30px auto 0px auto;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
         }
-        .wrap > a {
-            width: 320px;
-            height: 59px;
-            border-radius: 16px;
-            background-color: white;
-            margin-bottom: 16px;
-            font-size: 16px;
-            font-weight: bold;
-            color:#000000;
+        .bigs {
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
             justify-content: center;
             align-items: center;
-            text-decoration: none;
-            border: 1px solid #353432;
+            padding: 0px;
+            gap: 10px;
         }
-        .wrap > a:hover {
-            background-color: #ffebb5;
+        .bigs > a {
+            width: 123px;
+            background-color: white;
+            margin-bottom: 16px;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            text-decoration: none;
+            padding: 20px 16px 16px 16px;
+            border-radius: 8px;
+        }
+        .name {
+            font-size: 22px;
+            font-weight: 700;
+            color: #222222;
+            margin-bottom: 45px;
+        }
+        .desc {
+            font-size: 12px;
+            font-weight: 500;
+            color: #555555;
+            margin-bottom: 24px;
+        }
+        .btn {
+            font-size: 12px;
+            font-weight: 700;
+            color: #ffffff;
+            background-color: #26C50C;
+            border-radius: 4px;
+            padding: 5px 4px 5px 4px;
         }
     </style>
 </head>
 <body>
     <div class="wrap">
-        <div class="profile"></div>
-        <h1 class="main">밀리콩</h1>
-        <p class="sub">구름머리 보들이와 자유로운 영혼 젤리를 그려요</p>
-        <a target="_blank" href="https://spartacodingclub.kr/">보들마켓</a>
-        <a target="_blank" href="https://spartacodingclub.kr/community/blog">블로그</a>
-        <a target="_blank" href="https://www.youtube.com/c/SpartaCodingClub">유튜브</a>
-        <a target="_blank" href="https://spartacodingclub.kr/">포트폴리오</a>
+        <div class="pro">
+            <div class="headcopy">
+                <h1 class="main">글쓰는 마케터<br> 이예은 입니다.</h1>
+                <p class="sub">#E-commerce #Contents #CRM </p>
+            </div>
+            <div class="profile"></div>
+        </div>
+        <div class="minis">
+            <a class="notion" target="_blank" href="https://yeunism.notion.site/Yeniverse-9d751ab1a0624517b5c63322ae1386f2"> 노션         ></a>
+            <a class="brunch" target="_blank" href="https://ozllrlo.tistory.co.kr">티스토리         ></a>
+            <a class="facebook" target="_blank" href="https://instagram.com/yedrawing.zip"> 인스타그램       ></a>
+        </div>
+        <div style="color:#FFFFFF;width: 320px;font-size: 14px;margin-bottom: 8px;">저를 소개합니다.</div>
+        <div class="bigs">
+            <a target="_blank" href="https://drive.google.com/file/d/1vKXXHboiF39D8OdandIZRlAVe4ggnONb/view">
+                <div class="name">이력서</div>
+                <div class="desc">데이터에 감성을 담아<br>마음을 움직이는<br>마케터입니다.</div>
+                <div class="btn">다운로드</div>
+            </a>
+            <a target="_blank" href="https://drive.google.com/file/d/1vKXXHboiF39D8OdandIZRlAVe4ggnONb/view">
+                <div class="name">포트폴리오</div>
+                <div class="desc">애자일하게 일하며<br>성과를 냈었던 경험을<br>담았습니다.</div>
+                <div class="btn">다운로드</div>
+            </a>
+        </div>
+        <div style="color:#B1B1B5;font-size: 14px;background-position: center;background-size: cover;position: absolute;bottom: 50px;">@kimrtan</div>
     </div>
 </body>
 </html>
