--- a/index.html
+++ b/index.html
@@ -147,12 +147,12 @@
         </div>
         <div style="color:#FFFFFF;width: 320px;font-size: 14px;margin-bottom: 8px;">저를 소개합니다.</div>
         <div class="bigs">
-            <a target="_blank" href="https://drive.google.com/file/d/1vKXXHboiF39D8OdandIZRlAVe4ggnONb/view">
+            <a target="_blank" href=" ">
                 <div class="name">이력서</div>
                 <div class="desc">데이터에 감성을 담아<br>마음을 움직이는<br>마케터입니다.</div>
                 <div class="btn">다운로드</div>
             </a>
-            <a target="_blank" href="https://drive.google.com/file/d/1vKXXHboiF39D8OdandIZRlAVe4ggnONb/view">
+            <a target="_blank" href=" ">
                 <div class="name">포트폴리오</div>
                 <div class="desc">애자일하게 일하며<br>성과를 냈었던 경험을<br>담았습니다.</div>
                 <div class="btn">다운로드</div>
