--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         </div>
         <div class="minis">
             <a class="notion" target="_blank" href="https://yeunism.notion.site/Yeniverse-9d751ab1a0624517b5c63322ae1386f2"> 노션         ></a>
-            <a class="tistory" target="_blank" href="https://ozllrlo.tistory.co.kr">티스토리         ></a>
+            <a class="tistory" target="_blank" href="https://ozllrlo.tistory.com">티스토리         ></a>
             <a class="instagram" target="_blank" href="https://instagram.com/drawith_ye"> 인스타그램       ></a>
         </div>
         <div style="color:#FFFFFF;width: 320px;font-size: 14px;margin-bottom: 8px;">저를 소개합니다.</div>
