--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         </div>
         <div style="color:#FFFFFF;width: 320px;font-size: 14px;margin-bottom: 8px;">저를 소개합니다.</div>
         <div class="bigs">
-            <a target="_blank" href=" ">
+            <a target="_blank" href="https://drive.google.com/file/d/1ZzI1tsEEmPZnIzzZAsNyjr2J7SkOVqDP/view?usp=sharing">
                 <div class="name">이력서</div>
                 <div class="desc">데이터에 감성을 담아<br>마음을 움직이는<br>마케터입니다.</div>
                 <div class="btn">다운로드</div>
