--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <div class="btn">다운로드</div>
             </a>
         </div>
-        <div style="color:#B1B1B5;font-size: 14px;background-position: center;background-size: cover;position: absolute;bottom: 50px;">@kimrtan</div>
+        <div style="color:#B1B1B5;font-size: 14px;background-position: center;background-size: cover;position: absolute;bottom: 50px;">@Leeyeeun</div>
     </div>
 </body>
 </html>
