--- a/index.html
+++ b/index.html
@@ -135,14 +135,14 @@
     <div class="wrap">
         <div class="pro">
             <div class="headcopy">
-                <h1 class="main">글쓰는 마케터<br> 이예은 입니다.</h1>
-                <p class="sub">#E-commerce #Contents #CRM </p>
+                <h1 class="main">제네럴리스트<br> 이예은 입니다.</h1>
+                <p class="sub">#E-commerce  #Contents  #CRM </p>
             </div>
             <div class="profile"></div>
         </div>
         <div class="minis">
             <a class="notion" target="_blank" href="https://yeunism.notion.site/Yeniverse-9d751ab1a0624517b5c63322ae1386f2"> 노션         ></a>
-            <a class="tistory" target="_blank" href="https://haniz.tistory.com">티스토리         ></a>
+            <a class="tistory" target="_blank" href="https://brunch.co.kr/@yeniverse">브런치         ></a>
             <a class="instagram" target="_blank" href="https://instagram.com/drawith_ye"> 인스타그램       ></a>
         </div>
         <div style="color:#FFFFFF;width: 320px;font-size: 14px;margin-bottom: 8px;">저를 소개합니다.</div>
