--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <div class="desc">데이터에 감성을 담아<br>마음을 움직이는<br>마케터입니다.</div>
                 <div class="btn">다운로드</div>
             </a>
-            <a target="_blank" href=" ">
+            <a target="_blank" href="https://drive.google.com/file/d/1IK2BOCSdMDKJreqyHTD_TCTG9G-gIPv0/view?usp=sharing">
                 <div class="name">포트폴리오</div>
                 <div class="desc">애자일하게 일하며<br>성과를 냈었던 경험을<br>담았습니다.</div>
                 <div class="btn">다운로드</div>
